--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,8 @@ platform = espressif8266
 board = nodemcu
 framework = arduino
 monitor_speed = 115200
+
+[env:nodemcuv2]
+platform = espressif8266
+board = nodemcuv2
+framework = arduino
